# ccclubs_AI_RPA

./: .gitignore  HANDOVER.md  README.md  project.md
CCC-Browser/: .env.example  package-lock.json  package.json  tsconfig.json
CCC-Browser/scripts/: debug-site.ts  test.js  test.ts
CCC-Browser/src/: main.js  main.ts
CCC-BrowserV2/: IMPLEMENTATION_PLAN.md  PLAN.md  方案A-极简配置驱动RPA自动化系统-完整落地开发文档（AI Agent可直接执行）.md
CCC-BrowserV2/backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.build.json
CCC-BrowserV2/src-tauri/: Cargo.toml  tauri.conf.json
CCC-BrowserV2/src-tauri/src/: main.rs
CCC-BrowserV3/: .gitignore  RPA自动化浏览器项目设计文档.docx
CCC-BrowserV3/scripts/: setup.sh  (+1 more)
CCC-BrowserV3/src-tauri/: Cargo.toml  tauri.conf.json
CCC-BrowserV3/src-tauri/capabilities/: default.json
CCC-BrowserV3/src-tauri/src/: commands.rs  main.rs  python_bridge.rs
CCC-BrowserV4/: .gitignore  docker-compose.yml
CCC-BrowserV4/src-tauri/: Cargo.toml  tauri.conf.json
CCC-BrowserV4/src-tauri/.cargo/: config.toml
CCC-BrowserV4/src-tauri/capabilities/: default.json
CCC-BrowserV4/src-tauri/src/: commands.rs  device.rs  main.rs
CCC_RPA_API/: .env.example  requirements.txt
backend/: .env.example  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend-api/: .env.example  .gitignore  README.md  package.json
desktop-browser/: electron-builder.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: api.md  deployment.md  ops-guide.md  redis-storage-design.md
extension/: manifest.json  package.json  sidepanel.html  tsconfig.json  webpack.config.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-web/: .env.development  .env.production  .prettierrc  README.md  package-lock.json  package.json
(+643 files in other folders)
